--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "chart.js": "^3.7.1",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "~1.4.4",
